--- a/app/src/main/res/layout/fragment_sign_in_email.xml
+++ b/app/src/main/res/layout/fragment_sign_in_email.xml
@@ -18,7 +18,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@color/white"
         android:layout_below="@+id/back_arrow"
         android:layout_centerHorizontal="true"
         android:layout_margin="16dp"
@@ -44,7 +44,6 @@
                 android:layout_margin="8dp"
                 android:maxLines="1"
                 android:inputType="textEmailAddress"
-                android:textCursorDrawable="@null"
                 />
 
             <Button
