--- a/app/src/main/res/layout/fragment_sign_in_password.xml
+++ b/app/src/main/res/layout/fragment_sign_in_password.xml
@@ -18,7 +18,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@color/white"
         android:layout_below="@+id/back_arrow"
         android:layout_centerHorizontal="true"
         android:layout_margin="16dp"
@@ -53,8 +53,7 @@
                 android:hint="@string/password"
                 android:layout_margin="8dp"
                 android:maxLines="1"
-                android:inputType="textPassword"
-                android:textCursorDrawable="@null"/>
+                android:inputType="textPassword" />
 
             <CheckBox
                 android:id="@+id/show_password_checkbox"
@@ -62,7 +61,6 @@
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
                 android:text="@string/show_password"
-                android:buttonTint="@android:color/black"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
 
             <Button
