--- a/app/src/main/res/layout/start_fragment.xml
+++ b/app/src/main/res/layout/start_fragment.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:text="@string/lets_get_started"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/white"
         android:layout_below="@+id/start_cross"
         android:layout_centerHorizontal="true"
         />
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="@string/sign_in_with_email"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/white"
         android:backgroundTint="@color/colorPrimary"
         android:layout_below="@+id/lets_get_started_text_view"
         android:layout_marginTop="144dp"
@@ -53,7 +53,7 @@
             android:layout_alignParentStart="true"
             android:layout_width="30dp"
             android:layout_height="2dp"
-            android:background="@color/colorAccent"
+            android:background="@color/white"
             android:layout_margin="3dp"
             android:layout_centerVertical="true"/>
         <TextView
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/v1"
             android:text="@string/or"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:layout_centerVertical="true"/>
         <View
@@ -70,7 +70,7 @@
             android:layout_toEndOf="@+id/v2"
             android:layout_width="30dp"
             android:layout_height="2dp"
-            android:background="@color/colorAccent"
+            android:background="@color/white"
             android:layout_margin="3dp"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:text="@string/create_acct"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/white"
         android:backgroundTint="@color/colorPrimary"
         android:layout_below="@+id/or_break_line"
         android:layout_marginTop="8dp"
@@ -103,7 +103,7 @@
             android:layout_height="wrap_content"
             android:text="@string/agreeing_with"
             android:textSize="12sp"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/white"
             android:textAlignment="center"
             />
         <LinearLayout
@@ -118,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/TnC"
                 android:textSize="12sp"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/white"
                 android:textAlignment="center"
                 />
             <TextView
@@ -127,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/and"
                 android:textSize="12sp"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/white"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:textAlignment="center"
@@ -140,7 +140,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/PrivacyStatement"
                 android:textSize="12sp"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/white"
                 android:textAlignment="center"
                 />
 
