--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,7 +29,15 @@
         android:id="@+id/createAccountLandingFragment"
         android:name="com.navismart.navismart.view.CreateAccountLandingFragment"
         android:label="fragment_create_account_landing"
-        tools:layout="@layout/fragment_create_account_landing" />
+        tools:layout="@layout/fragment_create_account_landing" >
+        <action
+            android:id="@+id/action_createAccountLandingFragment_to_marinaManagerRegisterFragment"
+            app:destination="@id/marinaManagerRegisterFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+    </fragment>
     <fragment
         android:id="@+id/signInEmail"
         android:name="com.navismart.navismart.view.SignInEmail"
@@ -52,4 +60,10 @@
         android:name="com.navismart.navismart.view.SignInPasswordFragment"
         android:label="fragment_sign_in_password"
         tools:layout="@layout/fragment_sign_in_password" />
+    <fragment
+        android:id="@+id/marinaManagerRegisterFragment"
+        android:name="com.navismart.navismart.view.MarinaManagerRegisterFragment"
+        android:label="fragment_marina_manager_register"
+        tools:layout="@layout/fragment_marina_manager_register"
+        />
 </navigation>
