--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#2874A6</color>
     <color name="colorPrimaryDark">#1B4F72</color>
     <color name="colorAccent">#616A6B</color>
+    <color name="background">#D0D3D4  </color>
     <color name="white">#FFFFFF</color>
 </resources>
