--- a/app/src/main/res/layout/fragment_marina_manager_register.xml
+++ b/app/src/main/res/layout/fragment_marina_manager_register.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.MarinaManagerRegisterFragment">
 
-    <ImageView
-        android:id="@+id/back_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_arrow_back_black_24dp" />
-
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/back_arrow">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,44 +36,59 @@
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
+                    android:backgroundTint="@color/colorPrimary"
                     android:text="@string/upload"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@android:color/black" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/white" />
             </LinearLayout>
 
-            <EditText
-                android:id="@+id/name_edit_text"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:hint="@string/name"
-                android:inputType="textPersonName"
-                android:maxLines="1" />
+                android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/email_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:hint="@string/email_id"
-                android:inputType="textEmailAddress"
-                android:maxLines="1" />
+                <EditText
+                    android:id="@+id/name_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:baselineAligned="false"
+                    android:hint="@string/name"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:theme="@style/BaseLineTheme" />
+            </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/password_edit_text"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:hint="@string/password"
-                android:inputType="textPassword" />
+                android:layout_height="wrap_content">
 
-            <CheckBox
-                android:id="@+id/show_password_checkbox"
+                <EditText
+                    android:id="@+id/email_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:baselineAligned="false"
+                    android:hint="@string/email_id"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:theme="@style/BaseLineTheme" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="@string/show_password"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+                app:passwordToggleEnabled="true">
+
+                <EditText
+                    android:id="@+id/password_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:baselineAligned="false"
+                    android:hint="@string/password"
+                    android:inputType="textPassword"
+                    android:theme="@style/BaseLineTheme" />
+            </android.support.design.widget.TextInputLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -88,12 +96,20 @@
                 android:layout_margin="5dp"
                 android:background="@android:color/darker_gray" />
 
-            <EditText
-                android:id="@+id/description_edit_text"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:hint="@string/description" />
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/description_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:baselineAligned="false"
+                    android:hint="@string/description"
+                    android:theme="@style/BaseLineTheme" />
+            </android.support.design.widget.TextInputLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -107,8 +123,10 @@
                     android:layout_gravity="start"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
+                    android:baselineAligned="false"
                     android:enabled="false"
-                    android:hint="@string/location" />
+                    android:hint="@string/location"
+                    android:theme="@style/BaseLineTheme" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -146,12 +164,20 @@
                 android:layout_margin="5dp"
                 android:background="@android:color/darker_gray" />
 
-            <EditText
-                android:id="@+id/tnc_edit_text"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:hint="@string/terms_conditions" />
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/tnc_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:baselineAligned="false"
+                    android:hint="@string/terms_conditions"
+                    android:theme="@style/BaseLineTheme" />
+            </android.support.design.widget.TextInputLayout>
+
 
             <View
                 android:layout_width="match_parent"
@@ -164,10 +190,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:backgroundTint="@color/colorPrimary"
                 android:enabled="false"
                 android:text="@string/register"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/white" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
