--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#616A6B</color>
     <color name="background">#D0D3D4  </color>
     <color name="white">#FFFFFF</color>
+    <color name="goldenYellow">#FFDF00</color>
 </resources>
