--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -10,4 +10,15 @@
         android:layout_height="match_parent"
         android:text="hello_blank_fragment" />
 
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="LOGOUT"
+        android:textSize="25sp"
+        android:padding="20dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@color/white"/>
+
 </FrameLayout>
