--- a/app/src/main/res/layout/fragment_boater_search_results.xml
+++ b/app/src/main/res/layout/fragment_boater_search_results.xml
@@ -12,13 +12,15 @@
         android:layout_margin="5dp"
         android:orientation="horizontal">
 
+        
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
             android:drawableLeft="@drawable/ic_search_gray_24dp"
-            android:hint="@string/location" />
+            android:hint="@string/location"
+            android:maxLines="1" />
 
         <ImageView
             android:id="@+id/change_date_icon"
@@ -70,7 +72,7 @@
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/closest"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/cheapest_sort_textView"
@@ -79,7 +81,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/cheapest"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
