--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,7 +29,7 @@
         android:id="@+id/createAccountLandingFragment"
         android:name="com.navismart.navismart.view.CreateAccountLandingFragment"
         android:label="fragment_create_account_landing"
-        tools:layout="@layout/fragment_create_account_landing" ></fragment>
+        tools:layout="@layout/fragment_create_account_landing"/>
     <fragment
         android:id="@+id/landingFragment"
         android:name="com.navismart.navismart.view.LandingFragment"
@@ -59,5 +59,18 @@
         android:id="@+id/boaterSearchResultsFragment"
         android:name="com.navismart.navismart.view.BoaterSearchResultsFragment"
         android:label="fragment_boater_search_results"
-        tools:layout="@layout/fragment_boater_search_results" />
+        tools:layout="@layout/fragment_boater_search_results" >
+        <action
+            android:id="@+id/action_boaterSearchResultsFragment_to_marinaPageFragment"
+            app:destination="@id/marinaPageFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+    </fragment>
+    <fragment
+        android:id="@+id/marinaPageFragment"
+        android:name="com.navismart.navismart.view.MarinaPageFragment"
+        android:label="fragment_marina_page"
+        tools:layout="@layout/fragment_marina_page" />
 </navigation>
